# oklibs

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  README.md  mull-ci.yml  mull.yml  okassert.hpp  okbase.hpp  okbitflag.hpp  oktest.hpp  okutils.hpp  xmake.lua
.github/workflows/: ci.yml  cmake.yml  coverage.yml  mull.yml  single-header.yml  zizmor.yml
libs/okassert/: README.md  xmake.lua
libs/okassert/include/okassert/: base.hpp  okassert.hpp
libs/okassert/include/okassert/detail/: expression.hpp  operators.hpp
libs/okassert/source/: base.cpp  okl.assert.cppm
libs/okassert/templates/include/: config.hpp.in
libs/okassert/tests/: assert.cpp  assume.cpp  test.hpp  verify.cpp  verify_val.cpp
libs/okassert/tests/fail_compile/: empty_assert.cpp  empty_expression_assert.cpp  empty_expression_verify.cpp  empty_severity_assert.cpp  empty_severity_verify.cpp  empty_verify.cpp  enforce_semicolon_assert.cpp  enforce_semicolon_verify.cpp  fail_compile_time_assert.cpp  fail_compile_time_verify.cpp  invalid_assert_message.cpp  invalid_verify_message.cpp  missing_assert_message_args.cpp  missing_verify_message_args.cpp  no_build_type_assert.cpp  no_build_type_verify.cpp  severity_only_assert.cpp  severity_only_verify.cpp
libs/okassert/tests/output/: assert.cpp  verify.cpp
libs/okassert/tests/output/outputs/: assert.txt  verify.txt
libs/okbase/: README.md  xmake.lua
libs/okbase/include/okbase/: architecture_defines.hpp  compiler_defines.hpp  concepts.hpp  core_defines.hpp  defines.hpp  macro_utils.hpp  okbase.hpp  os_defines.hpp  types.hpp
libs/okbase/source/: okl.base.cppm
libs/okbase/templates/include/: config.hpp.in
libs/okbase/tests/: concepts_tests.cpp  core_defines_tests.cpp  defines_tests.cpp  macro_utils_tests.cpp  types_tests.cpp
libs/okbitflag/: CMakeLists.txt  README.md  mull.yml  xmake.lua
libs/okbitflag/cmake/: config.hpp.in  okbitflag-config.cmake.in
libs/okbitflag/include/: okbitflag.hpp
libs/okbitflag/include/okbitflag/: bitflag.hpp  okbitflag.hpp
libs/okbitflag/include/okbitflag/detail/: reflect_utils.hpp  valid_flags.hpp
libs/okbitflag/source/: okl.bitflag.cppm  okl.bitflag.ixx
libs/okbitflag/templates/include/: config.hpp.in
libs/okbitflag/tests/: main.cpp  test.hpp
libs/oktest/: CMakeLists.txt  README.md  mull.yml  xmake.lua
libs/oktest/cmake/: config.hpp.in  oktest-config.cmake.in
libs/oktest/include/: oktest.hpp  oktest_short.hpp
libs/oktest/include/oktest/: assert_handler.hpp  cli.hpp  core_types.hpp  expression.hpp  get_runner.hpp  logger.hpp  main.hpp  oktest.hpp  oktest_short.hpp  output_redirector.hpp  registry_runner.hpp  reporter.hpp  runner.hpp  short_test.hpp  test.hpp  test_context.hpp  test_hierarchy.hpp  test_structs.hpp  theme.hpp  types.hpp
libs/oktest/include/oktest/detail/: assert_handler.hpp  compile_time_test_case.hpp  expression.hpp  runtime_test_case.hpp  scope.hpp  section.hpp
libs/oktest/source/: cli.cpp  logger.cpp  main.cpp  okl.test.cppm  okl.test.ixx
libs/oktest/templates/include/: config.hpp.in
libs/oktest/tests/: cli.cpp  example.cpp  examples.cpp  expression.cpp  fail_compile_time_assert.cpp  fail_compile_time_test.cpp  fail_constexpr_nothrow.cpp  fail_main_assert.cpp  fail_test.cpp  logger.cpp  macros.cpp  output_redirector.cpp  section.cpp  sections.cpp  short_macros.cpp  success.cpp
libs/oktest/tests/benchmarks/: asserts.cpp  include.cpp  template_test_cases.cpp  test_cases.cpp  test_cases2.cpp
libs/oktest/tests/outputs/: fail_constexpr_nothrow.txt  fail_main_assert.txt  fail_test.txt  logger.txt  macros.lua  macros.txt  sections.lua  sections.txt  success.lua  success.txt
libs/okutils/: CMakeLists.txt  README.md  mull.yml  xmake.lua
libs/okutils/cmake/: config.hpp.in  okutils-config.cmake.in
libs/okutils/include/okutils/: architecture_defines.hpp  compiler_defines.hpp  concepts.hpp  core_defines.hpp  defines.hpp  internal_defines.hpp  macro_utils.hpp  math.hpp  okutils.hpp  os_defines.hpp  safe_casts.hpp  type_traits.hpp  types.hpp  utils.hpp
libs/okutils/source/: okl.utils.cppm  okl.utils.ixx
libs/okutils/templates/include/: config.hpp.in
libs/okutils/tests/: concepts_tests.cpp  core_defines_tests.cpp  defines_tests.cpp  macro_utils_tests.cpp  main.cpp  math_tests.cpp  safe_casts_tests.cpp  test.hpp  types_tests.cpp  utils_tests.cpp
xmake/modules/okl/cli/: amalgamate.lua  verify_amalgamated.lua
xmake/plugins/coverage/: main.lua  xmake.lua
xmake/plugins/mull/: main.lua  xmake.lua
xmake/plugins/mull/scripts/mull/: test_runner.lua
xmake/plugins/oklib/: main.lua  xmake.lua
xmake/plugins/oklib/templates/c++/: README.md  xmake.lua
xmake/plugins/oklib/templates/c++/include/: %{libname}.hpp
xmake/plugins/oklib/templates/c++/include/%{libname}/: base.hpp
xmake/plugins/oklib/templates/c++/includes/: %{targetname}.hpp
xmake/plugins/oklib/templates/c++/source/: okl.%{libname}.cppm
xmake/plugins/oklib/templates/c++/templates/include/: config.hpp.in
xmake/plugins/oklib/templates/c++/tests/: base_tests.cpp  main.cpp  tests.cpp
xmake/rules/: coverage.lua
xmake/scripts/mull/: test_runner.lua
